scrollbar size fix

--- a/packages/ui/global.module.css
+++ b/packages/ui/global.module.css
@@ -221,9 +221,13 @@
 .wrapper {
     position: relative;
     overflow: hidden;
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
+}
+
+.wrapperBorder {
     border: 2px solid #000;
 }
 
@@ -256,7 +260,6 @@
     right: 0;
     width: 15px;
     height: 100%;
-    background-color: #718096;
 }
 
 .scrollTrackHorizontal {
@@ -265,7 +268,6 @@
     left: 0;
     height: 15px;
     width: calc(100% - 15px);
-    background-color: #718096;
 }
 
 .scrollPattern {
